# AwesomeMicroService

./: .gitignore  README.md
src/AuthApi/: app.py  pyproject.toml
src/SlackApi/: app.py  pyproject.toml  requirements.txt  slack_actions.py  slack_app.py  slack_events.py
